force-app/main/default/objects/Debug_Log__e/Debug_Log__e.object-meta.xml
<CustomObject>
    <description>Platform event object to send debug logs from the DebugLog class. These can be captured by a lightning component for display to authorized users</description>
    <label>Debug Log</label>
    <pluralLabel>Debug Logs</pluralLabel>
</CustomObject>