force-app/main/default/objects/Debug_Log__e/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>Name of the method that experienced the error</description>
    <label>Caller</label>
    <length>64</length>
    <type>Text</type>
</CustomField>