force-app/main/default/objects/Debug_Log__e/fields/DebugData__c.field-meta.xml
<CustomField>
    <fullName>DebugData__c</fullName>
    <description>Error message</description>
    <label>DebugData</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>