force-app/main/default/objects/Debug_Log__e/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>REST endpoint that was called</description>
    <label>EndPoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>